[package]
name = "kmhook"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
keycode = { git = "https://github.com/pzyyll/keycode.git", branch = "master" }
lazy_static = "1.5.0"
# keycode = { path = "../keycode/keycode" }
# keycode_macro = { path = "../keycode/keycode_macro" }

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_LibraryLoader",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Input",
    "Win32_Globalization",
] }

[features]
Debug = []
